Actions
Bug #9114
closedcmd/audio: invalid conversion from 'char' to 'char*'
Start date:
2018-02-15
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Build error from gcc 7:
In file included from AudioLib.cc:29:0: ../include/Audio.h:89:18: error: invalid conversion from 'char' to 'char*' [-fpermissive] char *msg = '\0') const; // error message ^~~~ *** Error code 1 dmake: Warning: Command failed for target `AudioLib.o'
Note this is just one example, since the error is on header, many files are affected.
Updated by Electric Monk over 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 779d959983c330a45b9542e16ae6a4a5d204309a
commit 779d959983c330a45b9542e16ae6a4a5d204309a Author: Toomas Soome <tsoome@me.com> Date: 2018-02-16T16:18:59.000Z 9114 cmd/audio: invalid conversion from 'char' to 'char*' Reviewed by: Yuri Pankov <yuripv@yuripv.net> Reviewed by: Robert Mustacchi <rm@joyent.com> Reviewed by: Aurélien Larcher <aurelien.larcher@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions