9114 cmd/audio: invalid conversion from 'char' to 'char*' Reviewed by: Yuri Pankov <yuripv@yuripv.net> Reviewed by: Robert Mustacchi <rm@joyent.com> Reviewed by: Aurélien Larcher <aurelien.larcher@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>